--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <br /><br />
     <div id="pets">
       <div class="card">
-        <img src="dog.jpg" alt="jerry" />
+        <img src="dog.jpg" alt="Friendly dog named Buzo looking for a home" />
         <h3>Meet Buzo</h3>
         <p>
           Buzo is a charming and friendly dog with a heart of gold, and she is
@@ -31,7 +31,7 @@
         </p>
       </div>
       <div class="card">
-        <img src="cat.jpg" alt="tom" />
+        <img src="cat.jpg" alt="Black and white cat named Tom with green eyes" />
         <h3>Meet Tom</h3>
         <p>
           Tom is a handsome and affectionate cat who is looking for his forever
